--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "^2.4.0",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.46",
+    "@material-ui/pickers": "^3.2.10",
     "@mdi/js": "^5.0.45",
     "@mdi/react": "^1.3.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -13,12 +16,15 @@
     "countries-list": "^2.5.4",
     "cross-fetch": "^3.0.4",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-social-login": "^3.4.6",
+    "react-to-print": "^2.6.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
