--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-to-print": "^2.6.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "tableexport": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
